parlassets/scss/_card.scss
/* ... */
.card-container.flipped {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);

    .front {
        pointer-events: none;
    }
}

.front {
    backface-visibility: hidden;
    // this is a hack TODO (same as above)
    overflow: hidden;
    position: relative;
}

.back {
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
    background: $white;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    backface-visibility: hidden;
    overflow: hidden;
}

.card-exit {
    background-color: $card-footer-button-passive-background;
    background-image: none;
    font-size: 26px;
    font-weight: 300;
    line-height: 28px;
    text-align: center;
}

.info-text {
    position: relative;
    margin: auto;
    max-width: 600px;
    font-weight: 300;
    margin-bottom: 1.5em;

    &.lead {
        font-size: 16px;
        font-weight: 500;
    }

    &.heading {
        font-weight: 400;
        margin-bottom: 0.25em;
        text-transform: uppercase;
    }
}

label {
    text-shadow: none;
    font-weight: 400;
}

input.form-control, textarea.form-control {
    border-radius: 0;
    box-shadow: none;
    border: 1px solid #000;
}

.btn-parlameter {
    background-color: $first;
    border: none;
    color: $white;
    height: 34px;
    line-height: 30px;
    padding: 0 10px;;
    margin-top: 5px;
}
.btn-full-width {
    width: 100%;
}
.btn-margin-left {
    margin-left: 20px;
}

// toggle
/* The switch - the box around the slider */
.embed-switch-container {
    width: 100%;
    height: 35px;
    overflow: hidden;
    position: relative;
}

.embed-label {
    float: left;
    line-height: 30px;
    margin-right: 20px;
}

.embed-switch-box {
    display: block;
    position: relative;
    margin-top: 1px;
    float: left;
    overflow: hidden;
    border-radius: 60px;

    .embed-switch {
        display: inline-block;
        height: 20px;
        margin-top: 5px;
        overflow: hidden;
        width: 57px;
        transition: all 0.5s;

        .embed-switches {
            width: 93px;
            height: 20px;
            position: relative;
            left: 0;
            transition: all 0.5s;
        }

        .leftswitch {
            float: left;
            width: 50%;
            text-align: left;
            background-color: $tab-passive;
            padding-left: 10px;
            color: $white;
        }

        .rightswitch {
            float: right;
            width: 50%;
            text-align: right;
            background-color: $background;
            padding-right: 10px;
        }
    }
}



.embed-switch-ball {
    width: 26px;
    height: 26px;
    border-radius: 13px;
    background-color: $first;
    position: absolute;
    top: 3px;
    right: 10px;
    transition: all 0.5s;
    box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
}

.embed-switch-box.off {
    .embed-switches {
        left: -36.5px;
    }
}

.embed-switch-box.off + .embed-switch-ball {
    right: 47px;
}

.embed-switch-big-box {
    display: block;
    overflow: hidden;
    position: relative;
    width: 80px;
    padding: 0 10px;
    height: 35px;

    cursor: pointer;
}

.embed-divider {
    width: 100%;
    height: 31px;
    padding: 25px 0;

    &::before {
        content: '';
        width: 100%;
        height: 0px;
        background-color: #000;

        display: block;
        position: relative;
    }
}


// "back side of the card
// card rippling animation
@keyframes ripple {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(100);
    }
    100% {
        transform: scale(1);
        top: -30px;
        left: -30px;
    }
}


.card-container, .card-content {
    overflow: hidden;
}
.card-content.scrollme {
    overflow-y: auto;
}
.card-header {
    z-index: 2;
}
.card-footer {
    z-index: 4;
}
.card-content {
    position: relative;
    z-index: 1;
    min-height: $half-card-height;

    &__empty {
        display: flex;
        justify-content: center;
        align-items: center;

        width: 100%;
        height: auto;
        padding-top: 10vh;

        @include respond-to(mobile) {
            padding-top: 30px;
        }
    }

    &__empty-inner {
        background: $background;
        width: 216px;
        height: 216px;
        border-radius: 50%;
        padding: 40px;

        @include respond-to(mobile) {
            width: 196px;
            height: 196px;
        }

        img {
            margin: 0 auto 5px;
            display: block;

            @include respond-to(mobile) {
                max-width: 60px;
            }
        }

        p {
            font-family: "Roboto Slab", sans-serif;
            color: $font-default;
            font-style: italic;
            font-size: 16px;
            text-align: center;

            @include respond-to(mobile) {
                font-size: 14px;
            }
        }
    }


}
.card-container::before {
    content: '';
    background-color: $card-footer-button-hover-background;
    position: absolute;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    position: absolute;
    right: 96px;
    bottom: 16px;

    transition: transform 0.4s ease-out;

    z-index: 3;
}
.card-container.clicked-info::before {
    right: 96px;
    bottom: 18px;
}
.card-container.clicked-embed::before {
    right: 58px;
    bottom: 18px;
}
.card-container.clicked-share::before {
    right: 20px;
    bottom: 18px;
}
.card-container.covered::before {
    animation: ripple 0.6s forwards;
}
.card-container.revealed::before {
    background-color: $card-footer-button-hover-background;
    animation: ripple 0.6s forwards;
}

.card-footer .card-logo {
    width: 50px;
    float: left;
}
.card-footer .card-logo a:hover {
    background: transparent;
}

.card-content-info {
  overflow-y: auto;
  max-height: 100%;
}
/* ... */

